--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="display1"></div>
+      <div class="display1">
+        <div class="previous-display">asdadasdas</div>
+        <div class="current-display">Ömer Aras</div>
+      </div>
 
       <div class="rakamlar">
         <div class="kutu kutu1">AC</div>
