number onclikc added

--- a/index.html
+++ b/index.html
@@ -10,31 +10,32 @@
   <body>
     <div class="container">
       <div class="display1">
-        <div class="previous-display">asdadasdas</div>
-        <div class="current-display">Ömer Aras</div>
+        <div class="previous-display">0123123</div>
+        <div class="current-display">0</div>
       </div>
 
       <div class="rakamlar">
         <div class="kutu kutu1">AC</div>
         <div class="kutu kutu2">±</div>
         <div class="kutu kutu3">%</div>
-        <div class="kutu kutu4">÷</div>
-        <div class="kutu kutu5">7</div>
-        <div class="kutu kutu6">8</div>
-        <div class="kutu kutu7">9</div>
-        <div class="kutu kutu8">x</div>
-        <div class="kutu kutu9">4</div>
-        <div class="kutu kutu10">5</div>
-        <div class="kutu kutu11">6</div>
-        <div class="kutu kutu12">-</div>
-        <div class="kutu kutu13">1</div>
-        <div class="kutu kutu14">2</div>
-        <div class="kutu kutu15">3</div>
-        <div class="kutu kutu16">+</div>
+        <div class="islem kutu kutu4">÷</div>
+        <div class="sayi kutu kutu5">7</div>
+        <div class="sayi kutu kutu6">8</div>
+        <div class="sayi kutu kutu7">9</div>
+        <div class="islem kutu kutu8">x</div>
+        <div class="sayi kutu kutu9">4</div>
+        <div class="sayi kutu kutu10">5</div>
+        <div class="sayi kutu kutu11">6</div>
+        <div class="islem kutu kutu12">-</div>
+        <div class="sayi kutu kutu13">1</div>
+        <div class="sayi kutu kutu14">2</div>
+        <div class="sayi kutu kutu15">3</div>
+        <div class="islem kutu kutu16">+</div>
         <div class="kutu kutu17">0</div>
         <div class="kutu kutu18">.</div>
         <div class="kutu kutu19">=</div>
       </div>
     </div>
+    <script src="./app.js"></script>
   </body>
 </html>
