--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="display1">
         <div class="previous-display">0123123</div>
-        <div class="current-display">0</div>
+        <div class="current-display"></div>
       </div>
 
       <div class="rakamlar">
@@ -31,9 +31,9 @@
         <div class="sayi kutu kutu14">2</div>
         <div class="sayi kutu kutu15">3</div>
         <div class="islem kutu kutu16">+</div>
-        <div class="kutu kutu17">0</div>
+        <div class="sayi kutu kutu17">0</div>
         <div class="kutu kutu18">.</div>
-        <div class="kutu kutu19">=</div>
+        <div class="esittir kutu kutu19">=</div>
       </div>
     </div>
     <script src="./app.js"></script>
