--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="display1">
-        <div class="previous-display">0123123</div>
+        <div class="previous-display"></div>
         <div class="current-display"></div>
       </div>
 
