--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
       <div class="rakamlar">
         <div class="kutu kutu1">AC</div>
-        <div class="kutu kutu2">±</div>
-        <div class="kutu kutu3">%</div>
+        <div class="arti-eksi kutu kutu2">±</div>
+        <div class="yuzde kutu kutu3">%</div>
         <div class="islem kutu kutu4">÷</div>
         <div class="sayi kutu kutu5">7</div>
         <div class="sayi kutu kutu6">8</div>
@@ -32,7 +32,7 @@
         <div class="sayi kutu kutu15">3</div>
         <div class="islem kutu kutu16">+</div>
         <div class="sayi kutu kutu17">0</div>
-        <div class="kutu kutu18">.</div>
+        <div class="sayi kutu kutu18">.</div>
         <div class="esittir kutu kutu19">=</div>
       </div>
     </div>
