--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="display1">
         <div class="previous-display"></div>
-        <div class="current-display"></div>
+        <div class="current-display">0</div>
       </div>
 
       <div class="rakamlar">
